Bug 1231306 - Handle plugin state changes correctly in content process (r=jimm)